# StrataKV

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: kv_bench.cc
docs/: ARCHITECTURE.md
include/stratakv/: db.h  iterator.h  options.h  status.h
src/: compaction.cc  compaction.h  db.cc  manifest.cc  manifest.h  memtable.cc  memtable.h  record.h  sstable.cc  sstable.h  status.cc  wal.cc  wal.h
tests/: compaction_test.cc  db_test.cc  manifest_test.cc  sstable_test.cc
